--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,21 @@ pyTorch/imgs/*
 lens_effect_project/app/lens-data/figures
 lens_effect_project/app/lens-data/training-runs
 lens_effect_project/app/data
+
+## Latex files
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.fdb_latexmk
+*.fls
+*.lof
+*.log
+*.run.xml
+*.synctex.gz
+*.toc
+*.pdf
+*.h5
+*.png
+*.jpeg
+*.jpg
